# operon-omp

./: .gitattributes  .gitignore  AGENTS.md  AUTO_UPDATER_SETUP.md  BUILDING_LINUX.md  BUILDING_WINDOWS.md  CHANGELOG.md  CLAUDE.md  CROSS_PLATFORM_GUIDELINES.md  ENTERPRISE_NOTES.md  LICENSE  OMP_MIGRATION_PLAN.md  README.md  RELEASE_NOTES_v0.1.0.md  build-intel.example.sh  build-universal.example.sh  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src-tauri/: .gitignore  Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/protocols/adaptyv/: SKILL.md
src-tauri/protocols/aeon/: SKILL.md
src-tauri/protocols/alpha-vantage/: SKILL.md
src-tauri/protocols/anndata/: SKILL.md
src-tauri/protocols/arboreto/: SKILL.md
src-tauri/protocols/astropy/: SKILL.md
src-tauri/protocols/benchling-integration/: SKILL.md
src-tauri/protocols/biopython/: SKILL.md
src-tauri/protocols/biorxiv-database/: SKILL.md
src-tauri/protocols/bioservices/: SKILL.md
src-tauri/protocols/brenda-database/: SKILL.md
src-tauri/protocols/bulk-rnaseq-deseq2/: PROTOCOL.md
src-tauri/protocols/cellxgene-census/: SKILL.md
src-tauri/protocols/chembl-database/: SKILL.md
src-tauri/protocols/cirq/: SKILL.md
src-tauri/protocols/citation-management/: SKILL.md
src-tauri/protocols/clinical-decision-support/: SKILL.md
src-tauri/protocols/clinical-reports/: SKILL.md
src-tauri/protocols/cobrapy/: SKILL.md
src-tauri/resources/: report_generator.py
src-tauri/src/: lib.rs  main.rs
(+250 files in other folders)
